--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="startpage.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="logo">Champions IT
         <nav class="list">
             <ul>
+                <li> <a href="index.html">Home</a></li>
                 <li> <a href="services.html">Services</a></li>
                 <li> <a href="contact.html">Contact</a></li>
                 <li> <a href="about.html">About</a></li>
