--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/startpage.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/variables.css">
 </head>
 
 <body>
-    <header class="logo">Champions IT
+    <header class="logo">
+        <h1>Champions IT</h1>
+        <img src="Pictures/Champions-IT bild.jpg" alt="Företags bild">
         <nav class="list">
             <ul>
                 <li> <a href="index.html">Home</a></li>
