--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="logo">
         <h1>Champions IT</h1>
-        <img src="Pictures/Champions-IT bild.jpg" alt="Företags bild">
+        <a href="index.html"><img src="Pictures/Champions-IT bild.jpg"></a>
         <nav class="list">
             <ul>
                 <li> <a href="index.html">Home</a></li>
