--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <nav class="list">
+        <ul>
+            <li> <a href="index.html">Home</a></li>
+            <li> <a href="services.html">Services</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+            <li> <a href="about.html">About</a></li>
+        </ul>
+
+        <header>
+            <h1>Kontakta oss</h1>
+        </header>
+    </nav>
 </body>
 </html>
