nav-header done in contact page

--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,20 @@
     
 </head>
 <body>
-
-    <nav class="list">
-        <ul>
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="services.html">Services</a></li>
-            <li> <a href="contact.html">Contact</a></li>
-            <li> <a href="about.html">About</a></li>
-        </ul>
-
-        <header>
-            <h1>Kontakta oss</h1>
-        </header>
-    </nav>
+    <header class="logo">
+        <h1>Champions IT</h1>
+        <a href="index.html"><img src="Pictures/Champions-IT bild.jpg"></a>
+        <nav class="list">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="services.html">Services</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+   <main>
+    <h1>Kontakta oss</h1>
+   </main>
 </body>
 </html>
