hero picture done

--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,9 @@
    <main>
     <h1>Kontakta oss</h1>
    </main>
+   
+   <section class="hero">
+    <img src="Pictures/bg-bild.jpg" alt="Bakgrundsbild kontakt-sida">
+   </seciton>
 </body>
 </html>
