box kontaktuppgifter klar

--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,22 @@
    <section class="hero">
     <img src="Pictures/bg-bild.jpg" alt="Bakgrundsbild kontakt-sida">
    </seciton>
+
+   <section class="info-boxes">
+    <div class="info-box">
+        <h2>Sociala medier</h2>
+        <p>Här är information om det första ämnet.</p>
+    </div>
+    <div class="info-box">
+        <h2>Kontaktuppgifter</h2>
+       <a class="email-link" href="mailto:ChampionsIT@jetski.com">ChampionsIT@jetski.com</a>
+      <a class="topligan-link" href="https://partizan.rs/en">PARTIZAN SNART I CHAMPIONS</a>
+    </div>
+    <div class="info-box">
+        <h2>Adress</h2>
+        <p>Här är information om det tredje ämnet.</p>
+    </div>
+   
+</section>
 </body>
 </html>
