--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/contact.css">
     <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     
 </head>
 <body>
@@ -45,5 +47,15 @@
     </div>
    
 </section>
+
+<footer>
+    <p>&#169 Champions IT</p> 
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-instagram"></a>
+
+
+</footer>
 </body>
 </html>
