--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,10 @@
 
 <footer>
     <p>&#169 Champions IT</p> 
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-instagram"></a>
+    <a href="https://www.jensenyh.se/" class="fa fa-facebook"></a>
+    <a href="https://www.jensenyh.se/" class="fa fa-twitter"></a>
+    <a href="https://www.jensenyh.se/" class="fa fa-linkedin"></a>
+    <a href="https://www.jensenyh.se/" class="fa fa-instagram"></a>
 
 
 </footer>
