--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                 <li> <a href="about.html">About</a></li>
             </ul>
         </nav>
+        
     </header>
-
+    <section>
+        <div class="background-image"></div>
+    </section>
     <footer>
         <p>&#169 Champions IT</p>  
     </footer>
