Bg bild till services inlagd (ej stylead ännu)

--- a/services.html
+++ b/services.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/services.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/variables.css">
 </head>
+
 <body>
-    
+    <header class="logo">
+        <h1>Champions IT</h1>
+        <a href="index.html"><img src="Pictures/Champions-IT bild.jpg"></a>
+        <nav class="list">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="services.html">Services</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="about.html">About</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <section>
+        <div class="bg-img"></div>
+    </section>
+    <footer>
+        <p>&#169 Champions IT</p>
+    </footer>
+
 </body>
+
 </html>
