text decoration contant page done

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,8 @@
    <section class="info-boxes">
     <div class="info-box">
         <h2>Sociala medier</h2>
-        <p>Här är information om det första ämnet.</p>
+        <p>Instagram:<a href="https://www.google.com/maps/place/Manchester+City+Football+Club/@53.4831357,-2.2029676,17z/data=!3m1!4b1!4m6!3m5!1s0x487bb1186efbbc23:0x62c4dc9692d4900d!8m2!3d53.4831325!4d-2.2003927!16s%2Fg%2F11ffw8td26?entry=ttu">Tryck på denna länk</a></p>    
+            
     </div>
     <div class="info-box">
         <h2>Kontaktuppgifter</h2>
@@ -43,7 +44,7 @@
     </div>
     <div class="info-box">
         <h2>Adress</h2>
-        <p>Här är information om det tredje ämnet.</p>
+        <p>Vårt huvudkontor:<a href="https://www.google.com/maps/place/Manchester+City+Football+Club/@53.4831357,-2.2029676,17z/data=!3m1!4b1!4m6!3m5!1s0x487bb1186efbbc23:0x62c4dc9692d4900d!8m2!3d53.4831325!4d-2.2003927!16s%2Fg%2F11ffw8td26?entry=ttu">Tryck på denna länk</a></p>    
     </div>
    
 </section>
