--- a/services.html
+++ b/services.html
@@ -25,7 +25,12 @@
 
     </header>
     <section>
-        <div class="bg-img"></div>
+        <div class="bg-img">
+            <aside class="services">
+                <h2>Services</h2>
+            </aside>
+        </div>
+
     </section>
     <footer>
         <p>&#169 Champions IT</p>
