--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="logo">
-        <a href="contact.html"><img src="Pictures/Champions_IT logga.png"></a>
+        <a href="index.html"><img src="Pictures/Champions_IT logga.png"></a>
         <nav class="list">
             <ul>
                 <li> <a href="index.html">Home</a></li>
