--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="logo">
-        <a href="services.html"><img src="Pictures/Champions_IT logga.png"></a>
+        <a href="index.html"><img src="Pictures/Champions_IT logga.png"></a>
         <nav class="list">
             <ul>
                 <li> <a href="index.html">Home</a></li>
