--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/startpage.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
 
 <body>
@@ -15,10 +16,10 @@
         <a href="index.html"><img src="Pictures/Champions_IT logga.png"></a>
         <nav class="list">
             <ul>
-                <li> <a href="index.html">Home</a></li>
-                <li> <a href="services.html">Services</a></li>
-                <li> <a href="contact.html">Contact</a></li>
-                <li> <a href="about.html">About</a></li>
+                <li> <a href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li> <a href="services.html"><i class="fa-solid fa-clone"></i>Services</a></li>
+                <li> <a href="contact.html"><i class="fa-solid fa-phone"></i>Contact</a></li>
+                <li> <a href="about.html"><i class="fa-solid fa-user"></i>About</a></li>
             </ul>
         </nav>
         
