--- a/about.html
+++ b/about.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/about.css">
+    <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <header class="logo">
+        <a href="index.html"> <img src="Pictures/Champions_IT logga.png"></a>
+        <nav class="list">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="services.html">Services</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="bild">
+        <img src="Pictures/istockphoto-1400739452-612x612.jpg" alt="background-image">
+    </section>
 </body>
 </html>
