Read more & show less knapp inlagd.

--- a/services.html
+++ b/services.html
@@ -36,14 +36,29 @@
     <div class="boxar">
 
         <div class="box1">
-            <h3>Box1</h3>
+            <input id="ch" type="checkbox">
+
+            <h3>Services 1</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
+                    Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
+                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                <label for="ch">Show less</label>
+            </div>
+            <label for="ch">Read more</label>
+
+
+
+
 
         </div>
         <div class="box2">
-            <h3>Box2</h3>
+            <h3>Services 2</h3>
         </div>
         <div class="box3">
-            <h3>Box3</h3>
+            <h3>Services 3</h3>
         </div>
 
     </div>
