--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             </ul>
         </nav>
     </header>
-    
     <section>
-        <div class="background-image"></div>
+        <div class="background-image">
+            <a href="services.html"class="btn">Klicka här för att se mer om oss!</a>
+        </div>
     </section>
     <footer>
         <p>&#169 Champions IT</p>  
