--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
             <ul>
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="services.html">Services</a></li>
-                <li> <a href="contact.html">contact</a></li>
+                <li> <a href="contact.html">Contact</a></li>
                 <li> <a href="about.html">About</a></li>
             </ul>
         </nav>
