Read more show less fixad.

--- a/services.html
+++ b/services.html
@@ -55,11 +55,34 @@
 
         </div>
         <div class="box2">
+            <input id="ch2" type="checkbox">
             <h3>Services 2</h3>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+
+            <div class="content2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
+                    Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
+                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                <label for="ch2">Show less</label>
+            </div>
+            <label for="ch2">Read more</label>
         </div>
         <div class="box3">
+            <input id="ch3" type="checkbox">
+
             <h3>Services 3</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+
+            <div class="content3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
+                    Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
+                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                <label for="ch3">Show less</label>
+            </div>
+            <label for="ch3">Read more</label>
         </div>
+    </div>
 
     </div>
     <footer>
