--- a/services.html
+++ b/services.html
@@ -41,12 +41,15 @@
             <input id="ch" type="checkbox">
 
             <h3>Services 1</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse.</p>
 
             <div class="content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
                     Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
-                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                    Eos, laudantium adipisci. Impedit, consequuntur nam. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Voluptatibus expedita molestias laborum itaque, nostrum quod. Enim, ad quaerat
+                    porro corporis sapiente necessitatibus excepturi repellendus maxime, magnam animi fugit vel facere.
+                </p>
                 <label for="ch">Show less</label>
             </div>
             <label for="ch">Read more</label>
@@ -60,12 +63,15 @@
             <input id="ch2" type="checkbox">
             <h3>Services 2</h3>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse.</p>
 
             <div class="content2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
                     Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
-                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                    Eos, laudantium adipisci. Impedit, consequuntur nam. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Voluptatibus expedita molestias laborum itaque, nostrum quod. Enim, ad quaerat
+                    porro corporis sapiente necessitatibus excepturi repellendus maxime, magnam animi fugit vel facere.
+                </p>
                 <label for="ch2">Show less</label>
             </div>
             <label for="ch2">Read more</label>
@@ -74,12 +80,15 @@
             <input id="ch3" type="checkbox">
 
             <h3>Services 3</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse...</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae iure error labore magni odit esse.</p>
 
             <div class="content3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ducimus dolorum sunt ad?
                     Consectetur repellat fugit aut excepturi nesciunt dignissimos sit dolorum perspiciatis corporis?
-                    Eos, laudantium adipisci. Impedit, consequuntur nam.</p>
+                    Eos, laudantium adipisci. Impedit, consequuntur nam. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Voluptatibus expedita molestias laborum itaque, nostrum quod. Enim, ad quaerat
+                    porro corporis sapiente necessitatibus excepturi repellendus maxime, magnam animi fugit vel facere.
+                </p>
                 <label for="ch3">Show less</label>
             </div>
             <label for="ch3">Read more</label>
@@ -88,13 +97,13 @@
 
     </div>
     <footer>
-        <p>&#169 Champions IT</p> 
+        <p>&#169 Champions IT</p>
         <a href="https://www.jensenyh.se/" class="fa fa-facebook"></a>
         <a href="https://www.jensenyh.se/" class="fa fa-twitter"></a>
         <a href="https://www.jensenyh.se/" class="fa fa-linkedin"></a>
         <a href="https://www.jensenyh.se/" class="fa fa-instagram"></a>
-    
-    
+
+
     </footer>
 
 </body>
