addat loggan på kontakt hemsidan

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
    <main>
     <h1>Kontakta oss</h1>
    </main>
+   <div class="logo-wrapper">
+    <img src="Pictures/Champions_IT logga.png" alt="Företagets logga">
+   </div>
    
    <section class="hero">
     <img src="Pictures/bg-bild.jpg" alt="Bakgrundsbild kontakt-sida">
