--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Kontakt</title>
     <link rel="stylesheet" href="CSS/contact.css">
     <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
